--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "server": "node server/server.js",
     "client": "npm --prefix ./client run dev",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "cd client && npm run build",
+    "start": "node server/server.js",
+    "postinstall": "npm run build"
   },
   "keywords": [],
   "author": "",
