--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "build": "cd client && npm run build",
     "start": "node server/server.js",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "install": "cd server && npm i && cd ../client && npm i"
   },
   "keywords": [],
   "author": "",
